# sunobrain

TXDK/: .gitignore
TXDK/api/: album-cover.py  generate.py
TXDK/sunobrain/sunobrain/: App.tsx  index.css  index.html  package-lock.json  package.json  tailwind.config.js  types.ts
TXDK/sunobrain/sunobrain/api/: album-cover.py  generate.py
TXDK/sunobrain/sunobrain/components/: AlbumCover.tsx  AutoTextarea.tsx  BuilderPanel.tsx  BuilderSection.tsx  CollapsibleCard.tsx  ErrorBoundary.tsx  ExcludeOutput.tsx  GenreSelector.tsx  HistoryDrawer.tsx  InputPanel.tsx  LoadingAnimation.tsx  LyricsOutput.tsx  OneshotPanel.tsx  OutputPanel.tsx  PresetCards.tsx  SettingsPanel.tsx  SongTitle.tsx  StyleOutput.tsx  ThemeSelector.tsx  TopModeToggle.tsx
TXDK/sunobrain/sunobrain/hooks/: useGenerate.ts  useSongHistory.ts  useTheme.ts
TXDK/sunobrain/sunobrain/services/: apiClient.ts  supabase.ts
TXDK/sunobrainapi/: parser.py  prompts.py  pyproject.toml  sunobrainapi.py  supabase_schema.sql
